--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -49,7 +49,7 @@
   </div>
   <div class="d-flex ">
     <button class=" contact btn  btn-sm btn-lg-lg  me-3 ms-3 fs-5 fw-bold  text-warrning">{{"contactUs" |
-      translate}}</button>
+      translate}}<a src="https://wa.me/201050523555"></a></button>
     <button class="btn btn-dark d-lg-none d-block " type="button" data-bs-toggle="offcanvas"
       data-bs-target="#offcanvasScrolling" aria-controls="offcanvasScrolling"><i
         class="bi bi-list text-light"></i>{{"Menu" | translate}}</button>
@@ -72,7 +72,7 @@
         <div class=" ">
           <ul class=" navbar-nav mx-auto fw-bold m-3">
             <li class="nav-item active ">
-              <a class="nav-link" href="#">{{"home" | translate}} <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="#">{{"home" | translate}}</a>
             </li>
             <li class="nav-item">
               <div class="nav-item dropdown me-5">
