--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,5 +1,5 @@
 <div class="bg-light p-5 row">
-    <div class="col-5">
+    <div class="col-lg-5 col-sm-12">
         <h3>{{"contactUs" | translate}}</h3>
         <ul class="d-flex contact fs-3">
             <li class="m-3 text-primary"><a href="https://www.facebook.com/VarroxSystems"><i class="bi bi-facebook"></i></a></li>
@@ -11,8 +11,5 @@
     <div class="col-2">
         <h2>Varrox</h2>
         <p>&copy; 2023 varrox.com</p>
-    </div>
-    <div class="col-5">
-
     </div>
 </div>
