--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -8,7 +8,7 @@
             <li class="m-3 text-primary"><a><i class="bi bi-linkedin"></i></a></li>
         </ul>
     </div>
-    <div class="col-2">
+    <div class="col-lg-5 col-sm-12">
         <h2>Varrox</h2>
         <p>&copy; 2023 varrox.com</p>
     </div>
