--- a/src/app/components/our-works/our-works.component.html
+++ b/src/app/components/our-works/our-works.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid p-lg-3">
     <h1 class="text-center mb-4 works ">{{"works" | translate}}</h1>
     <div class="">
-        <div class="row p-0 p-sm-3 " dir="{{direction}}">
+        <div class="row p-0  " dir="{{direction}}">
             <div class="card m-5 p-2 col-lg-4 col-md-6 col-12 " style="width: 18rem;" *ngFor="let project of projects">
                 <div class="col-12" >
                     <img [src]="project.Image[0].url" class="card-img-top w-100" style="max-height: 300px;" >
