--- a/src/app/components/carousel/carousel.component.html
+++ b/src/app/components/carousel/carousel.component.html
@@ -30,7 +30,7 @@
 <div class="col-12  p-0 mt-3">
   <app-our-service></app-our-service>
 </div>
-<div class="col-12 p-5 mt-3">
+<div class="col-12 p-lg-3 p-sm-0 mt-3">
   <app-our-works></app-our-works>
 </div>
 <div class="col-12  mt-3">
